--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app"
@@ -28,5 +31,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "homepage": "htts://belenespilman.github.io/todo-app",
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
