--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write \"src/**/*.js\""
   },
-
   "eslintConfig": {
     "extends": [
       "react-app"
@@ -34,6 +34,7 @@
   },
   "homepage": "htts://belenespilman.github.io/todo-app",
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "prettier": "^3.2.4"
   }
 }
