--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "platzi-intro-react-base",
   "version": "0.1.0",
   "dependencies": {
-    "react": "^18",
+    "react": "^18.2.0",
     "react-dom": "^18",
     "react-scripts": "5.0.1",
+    "scripts": "^0.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
